src/components/Donate/DonatePage.css
.donateContainer {
  display: flex;
  align-items: center;
  flex-direction: column;
  gap: 10px;
  background: url(../../images/donateimage.jpg) center center/ cover no-repeat;
  height: 100%;
  width: 100%;
  object-fit: contain;
  margin-top: -80px;
  justify-content: center;
  box-shadow: inset 0 0 0 1000px rgba(0,0,0, 0.2);
  
}


@media screen and (max-width: 960px) {
  .donateContainer {
    height: 100%;
  }
}

.paypalBtns {
  display: flex;
  flex-direction: column;
  width: clamp(310px, 80%, 350px);
  justify-content: center;
  align-self: center;
  border: black solid 5px;
  border-radius: 15px;
  padding: 10px;
  background: lightgray;
}

.inputPayment {
 border: none;
 border-radius: 15px;
 padding: 5px;
 background-color: #e8e8e8;
 font-size: medium;
 font-weight: bold;
 max-width: 150px;
 text-align: center;
 margin-bottom: 10px;
}

.inputPayment:focus {
 outline-color: white;
 place-content: "Enter your message!";
}


.currencySymbol {
  font-size: 1.5rem;
}

.flexRow {
  display: flex;
  justify-content: center;
}

.presetAmt {
  padding: 1.3em 3em;
  font-size: 12px;
  text-transform: uppercase;
  letter-spacing: 2.5px;
  font-weight: 500;
  color: #000;
  background-color: #fff;
  border: none;
  border-radius: 45px;
  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
  transition: all 0.3s ease 0s;
  cursor: pointer;
  outline: none;
}

.presetAmt:hover {
  background-color: #23c483;
  box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
  color: #fff;
  transform: translateY(-7px);
}

.presetAmt:active {
  transform: translateY(-1px);
}

.presetAmounts {
  display: flex;
  flex-direction: column;
  gap: 13px;
  justify-content: space-evenly;
  margin-bottom: 10px;
}

.buttonRow {
  display: flex;
  justify-content: space-around; 
}

.heroTitle {
  margin-top: 80px;
}

.infoBox {
  display: flex;
  flex-direction: column;
  width: 50%;
  border-radius: 15px;
  text-align: center;
  padding: 20px;
  gap: 20px;
  background: white;
  height: 100%;
  min-height: 100%;
box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
}


@media screen and (max-width: 960px) {
  .infoBox {
    width: 90%;
  }
}

.hadith {
  border: solid gold 2px;
  color: white;
  border-radius: 10px;
  padding: 15px;
  background-color: #13e816;
  background-color: black;
box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
}

.paypalWrapper {
  display: flex;
  justify-content: center;
}

.donate {
  display: flex;
}

